@@ -31,6 +31,7 @@ require 'god/conditions/always'
 require 'god/conditions/lambda'
 require 'god/conditions/degrading_lambda'
 require 'god/conditions/flapping'
+require 'god/conditions/http_response_code'
 
 require 'god/contact'
 require 'god/contacts/email'
