@@ -5,6 +5,7 @@
   * Add TriggerCondition for conditions that need info about state changes
   * Implement notification system
   * Add Tasks (a generalization of Watches) to do non-process related tasks
+  * Add example init.d file in GOD_INSTALL_DIR/init/god
 * Minor Enchancements
   * Allow EventConditions to do transition overloading
   * Report errors during god startup instead of failing silently
@@ -12,6 +13,8 @@
   * Better usage info for `god --help`
   * Report usage when just `god` is run
   * Explain what's going on when attempting to rebind to an in-use port
+  * Add -b option to god binary to auto-bind to an unused port
+  * Add `god quit` to stop god without stopping any tasks
 * New Conditions
   * Flapping < TriggerCondition - trigger on state change
 * New Contacts
